1st react component and mobx store along with boilerplate react

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <title>Spotify History</title>
   </head>
   <body>
+    <div>asdzxcqwe</div>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
