Added header and header style

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spotify History</title>
+    <title>Spotify Artist Search</title>
   </head>
   <body>
-    <div>asdzxcqwe</div>
     <div class="container"></div>
   </body>
   <script src="/bundle.js"></script>
