changed selector for app render from class to id

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Spotify Artist Search</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div id="container"></div>
   </body>
   <script src="/bundle.js"></script>
 </html>
