--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="container"></div>
+    <script src="./bundle.js" type="text/javascript"></script>
   </body>
-  <script src="/bundle.js"></script>
 </html>
